CSS Refactor. Moved Espruino REPL to playgrounds directory

--- a/dom/index.html
+++ b/dom/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - dom</title>
-  <link rel="stylesheet" href="../base.css">
+  <title>ixfx / dom</title>
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
@@ -15,6 +15,9 @@
       <a href="../">../</a> dom
     </header>
     <section>
+      <ul class="pillbox">
+        <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Dom.html">API Reference</a></li>
+      </ul>
       <ul class="nobullets">
         <li><a href="log/">log</a>: use a HTML element to log data</li>
       </ul>
