--- a/flow/list-async/index.html
+++ b/flow/list-async/index.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>List Async</title>
-  <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
+  body {
+    background-color: #fde2e4;
+    color: #735d78;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+
   button {
     padding: 0.4em;
   }
