--- a/geometry/circle-path-svg/index.html
+++ b/geometry/circle-path-svg/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Circle Path SVG</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>circle-path-svg</title>
 </head>
 
 <body>
@@ -14,6 +13,8 @@
     html {
       height: 100%;
       width: 100%;
+      background-color: #FBF8F1;
+      color: #54BAB9;
     }
   </style>
   <svg></svg>
