--- a/geometry/circle-svg/index.html
+++ b/geometry/circle-svg/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Circle SVG</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>circle-svg</title>
 </head>
 
 <body>
@@ -15,6 +14,10 @@
       height: 100%;
       width: 100%;
       touch-action: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #302A77;
     }
   </style>
   <svg></svg>
