--- a/geometry/grid-dom/index.html
+++ b/geometry/grid-dom/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grid DOM</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>grid-dom</title>
 </head>
 
 <body>
@@ -14,6 +13,7 @@
     html {
       height: 100%;
       width: 100%;
+      background-color: silver;
     }
 
     main {
@@ -28,7 +28,7 @@
     .cell {
       width: 5vw;
       height: 5vw;
-      border: 1px solid var(--gray-light);
+      border: 1px solid darkblue;
       transition: background 1.5s ease-out;
     }
 
