--- a/geometry/index.html
+++ b/geometry/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - geometry</title>
-  <link rel="stylesheet" href="../base.css">
+  <title>ixfx / geometry</title>
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
@@ -13,9 +13,17 @@
     <header>
       <a href="../">../</a> geometry
     </header>
+    <ul class="pillbox">
+      <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/">Documentation</a></li>
+      <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.html">API Reference</a></li>
+    </ul>
     <div class="demos">
       <div>
         <h1>arcs</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/arc/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Arcs.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/arc-drawing"></a>
@@ -41,6 +49,10 @@
       </div>
       <div>
         <h1>circles</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/circle/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Circles.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/circle-drawing"></a>
@@ -67,6 +79,10 @@
       </div>
       <div>
         <h1>grid</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/grid/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Grids.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/grid-dom"></a>
@@ -85,6 +101,11 @@
       </div>
       <div>
         <h1>polar coordinates</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/units/#polar">Documentation</a>
+          </li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Polar.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-spiral"></a>
@@ -100,6 +121,11 @@
       </div>
       <div>
         <h1>points</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/point/">Documentation</a>
+          </li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Points.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-drawing"></a>
@@ -125,6 +151,11 @@
       </div>
       <div>
         <h1>lines</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/line/">Documentation</a>
+          </li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Lines.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-math"></a>
@@ -145,6 +176,11 @@
       </div>
       <div>
         <h1>rectangles</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/types/geometry/rect/">Documentation</a>
+          </li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Geometry.Rects.html">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/rectangle-drawing"></a>
