--- a/geometry/point-particle/index.html
+++ b/geometry/point-particle/index.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Point particle</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>point-particle</title>
 </head>
 
 <body>
   <style>
     :root {
       --hue: 200;
+      --bg: hsl(194, 100%, 33%);
     }
 
     body {
-      background-color: hsl(194, 100%, 33%);
+      background-color: var(--bg);
+
     }
 
     h1 {
-      color: #00afb9;
+      color: hsl(var(--hue), 100%, 10%);
     }
   </style>
   <section>
