--- a/geometry/polar-spiral/index.html
+++ b/geometry/polar-spiral/index.html
@@ -4,11 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Polar spiral</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>polar-spiral</title>
 </head>
 
 <body>
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: silver;
+
+    }
+  </style>
   <section>
     <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
