--- a/io/index.html
+++ b/io/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - input output</title>
-  <link rel="stylesheet" href="../base.css">
+  <title>ixfx / input output</title>
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
@@ -15,9 +15,21 @@
       <a href="../">../</a> input output
     </header>
     <section>
-      <ul class="nobullets">
-        <li><a href="espruino-repl/">espruino-repl</a>: Playground for sending code to an Espruino interactively</li>
-      </ul>
+      <div>
+        <p>
+          The input/output module contains functions for getting data in and out of the browser.
+        </p>
+        <p>
+          <a class="pill" href=" https://clinth.github.io/ixfx/modules/Io.html">API Reference</a>
+        </p>
+      </div>
+      <div>
+        <h1>playgrounds</h1>
+        <ul class="nobullets">
+          <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
+        </ul>
+      </div>
+
     </section>
   </main>
 </body>
