--- a/modulation/index.html
+++ b/modulation/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx - modulation</title>
-  <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
@@ -14,23 +14,40 @@
     <header>
       <a href="../">../</a> modulation
     </header>
+    <ul class="pillbox">
+      <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/envelope/">Documentation</a></li>
+      <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.html">API Reference</a></li>
+    </ul>
     <div class="demos">
       <div>
         <h1>envelope</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/envelope/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.html#adsr">API Reference</a></li>
+        </ul>
         <ul class="nobullets">
           <li><a href="./env-decay/">env-decay</a>: Using an envelope to gradually reduce a value</li>
         </ul>
       </div>
       <div>
         <h1>easing</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/easing/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.Easings.html">API Reference</a>
+          </li>
+        </ul>
         <ul class="nobullets">
           <li><a href="./easing-tick/">easing-tick</a>: Easing over <em>ticks</em></li>
           <li><a href="./easing-timer/">easing-timer</a>: Easing over time </li>
-
         </ul>
       </div>
       <div>
         <h1>oscillators</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/oscillator/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.Oscillators.html">API Reference</a>
+          </li>
+        </ul>
         <ul class="nobullets">
           <li><a href="./oscillator-starter/">oscillator-starter</a>: Starter</li>
         </ul>
