--- a/starters/index.html
+++ b/starters/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - starters</title>
-  <link rel="stylesheet" href="../base.css">
+  <title>ixfx / starters</title>
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
@@ -14,23 +14,28 @@
     <header>
       <a href="../">../</a> starters
     </header>
-    <section class="demos">
-      <p>Sketches that have some plumbing already set up, but don't do anything themselves. Good to use as a starting
-        point for your own exploration.</p>
-      <ul class="nobullets">
-        <li>
-          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas"></a>
-          <a href="./canvas/">canvas</a>
-        </li>
-        <li>
-          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
-          <a href="../flow/statemachine-starter/">statemachine</a>
-        </li>
-        <li>
-          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
-          <a href="../modulation/oscillator-starter/">oscillator</a>
-        </li>
-      </ul>
+    <section>
+      <div>
+
+        <p>Sketches that have some plumbing already set up, but don't do anything themselves. Good to use as a starting
+          point for your own exploration.</p>
+      </div>
+      <div>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas"></a>
+            <a href="./canvas/">canvas</a>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
+            <a href="../flow/statemachine-starter/">statemachine</a>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
+            <a href="../modulation/oscillator-starter/">oscillator</a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 </body>
