--- a/temporal/moving-average-audio/index.html
+++ b/temporal/moving-average-audio/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Moving average audio</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>moving-average-audio</title>
 </head>
 <style>
   :root {
     --avg-colour: #FB90B7;
     --raw-colour: #D01257;
+    --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   }
 
   html,
@@ -18,10 +18,11 @@
     height: 100%;
     background-color: #0F1021;
     color: #FFCEE4;
+    font-size: 14px;
+    font-family: var(--font);
   }
 
   body {
-    font-size: 12px;
     overscroll-behavior: contain;
     touch-action: none;
     overflow: hidden;
