--- a/temporal/moving-average-pointer/index.html
+++ b/temporal/moving-average-pointer/index.html
@@ -4,23 +4,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Moving average</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>moving-average-pointer</title>
 </head>
 <style>
+  :root {
+    --hue: 83;
+    --bg: hsl(var(--hue), 50%, 13%);
+    --fg: hsl(var(--hue), 50%, 80%)
+  }
+
   html,
   body {
     height: 100%;
   }
 
   body {
+    background-color: var(--bg);
     font-size: 12px;
     overscroll-behavior: contain;
+    overflow: hidden;
     touch-action: none;
   }
 
   #thing {
-    background-color: red;
+    background-color: var(--fg);
     display: inline-block;
     width: 5em;
     height: 5em;
