--- a/flow/debounce/index.html
+++ b/flow/debounce/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flow - Debounce</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>debounce</title>
 </head>
 <style>
   html,
   body {
     height: 100%;
+    background-color: #fde2e4;
+    color: #735d78;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   }
 
   body {
-    font-size: 12px;
     overscroll-behavior: contain;
     touch-action: none;
   }
@@ -22,7 +24,7 @@
 
 <body>
   <section>
-    <p>Try moving your pointer. Sketch won't respond until 1 second after the last event</p>
+    <em>Try moving your pointer. Sketch won't respond until 1 second after the last event</em>
     <div id="log"></div>
     <script type="module" src="script.js"></script>
   </section>
