--- a/flow/fetch-poll/index.html
+++ b/flow/fetch-poll/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fetch Poll</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>fetch-poll</title>
 </head>
 <style>
+  body {
+    background-color: #f8ffe5;
+    color: #2ec4b6;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+
   button {
     padding: 0.4em;
   }
@@ -16,8 +22,8 @@
 <body>
   <section>
     <h1>fetch-poll</h1>
-    <p>Demonstrates fetching JSON data every minute.</p>
-    <div id="status">Waiting for first fetch...</div>
+    <em>Demonstrates fetching JSON data at a certain rate.</em>
+    <div id="status">⏲️ Waiting 30 seconds for first fetch...</div>
     <div id="data"></div>
     <script type="module" src="script.js"></script>
   </section>
