--- a/flow/statemachine-starter/index.html
+++ b/flow/statemachine-starter/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flow - State Machine</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>state machine starter</title>
 </head>
 
 <body>
