--- a/geometry/circle-drawing/index.html
+++ b/geometry/circle-drawing/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Circle</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>circle-drawing</title>
 </head>
 
 <body>
