--- a/geometry/point-interpolate/index.html
+++ b/geometry/point-interpolate/index.html
@@ -4,23 +4,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Point interpolate</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>point-interpolate</title>
 </head>
 
 <body>
   <style>
     :root {
-      --hue: 200;
+      --hue: 347;
+      --hue2: 227;
+      --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      --bg: hsl(var(--hue2), 48%, 16%);
+      --fg: hsl(var(--hue2), 73%, 10%);
     }
 
     body {
-      background-color: #151D3B;
+      background-color: var(--bg);
       overflow: hidden;
-    }
-
-    h1 {
-      color: #DADBBD;
+      font-family: var(--font);
+      color: var(--fg);
     }
 
     #thing {
@@ -29,9 +30,8 @@
       top: 0;
       left: 0;
       padding: 1em;
-      background-color: #D82148;
+      background-color: hsl(var(--hue), 73%, 49%);
       border-radius: 3em;
-
     }
   </style>
   <section>
