--- a/geometry/polar-orbit/index.html
+++ b/geometry/polar-orbit/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Polar orbit</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>polar-orbit</title>
 </head>
 <style>
   body {
