--- a/geometry/rectangle-drawing/index.html
+++ b/geometry/rectangle-drawing/index.html
@@ -4,18 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rectangle drawing</title>
-  <link rel="stylesheet" href="../../base.css">
+  <title>rectangle-drawing</title>
 </head>
 
 <body>
   <style>
     :root {
       --hue: 200;
+      --bg: hsl(var(--hue), 10%, 80%);
+      --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
     body {
-      background-color: hsl(var(--hue), 10%, 80%);
+      font-family: var(--font);
+      background-color: var(--bg);
     }
 
     h1 {
