--- a/index.html
+++ b/index.html
@@ -5,35 +5,39 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx demos</title>
-  <link rel="stylesheet" href="./base.css">
+  <link rel="stylesheet" href="./demos.css">
 </head>
-<style>
-  #links {
-    margin-top: 3em;
-  }
-</style>
 
 <body>
-
-  <main class="fullHeight">
+  <main>
     <section id="parent">
       <h1>ixfx demos</h1>
-      <ul class="nobullets">
-        <li> / <a href="./dom/">dom</a></li>
-        <li> / <a href="./geometry/">geometry</a></li>
-        <li> / <a href="./io/">input output</a></li>
-        <li> / <a href="./modulation/">modulation</a></li>
-        <li> / <a href="./flow/">flow</a></li>
-        <li> / <a href="./temporal/">temporal</a></li>
-        <li> / <a href="./starters/">starters</a></li>
+      <div>
+        <h2>modules</h2>
+        <ul class="nobullets">
+          <li> / <a href="./dom/">dom</a></li>
+          <li> / <a href="./geometry/">geometry</a></li>
+          <li> / <a href="./io/">input output</a></li>
+          <li> / <a href="./modulation/">modulation</a></li>
+          <li> / <a href="./flow/">flow</a></li>
+          <li> / <a href="./temporal/">temporal</a></li>
+        </ul>
+      </div>
 
+      <div>
+        <h2>etc</h2>
+        <ul class="nobullets">
+          <li> / <a href="./starters/">starters</a></li>
+          <li> / <a href="./playgrounds/">playgrounds</a></li>
+        </ul>
+      </div>
 
-      </ul>
       <div id="links">
+        <h2>links</h2>
         <ul class="nobullets">
           <li class="local">&gt; <a title="View hosted version of demos"
-              href="https://clinth.github.io/ixfx-demos/">Demos online</a></li>
-          <li>&gt; <a title="Docs for ixfx" href="https://clinth.github.io/ixfx-docs/">Documentation online</a></li>
+              href="https://clinth.github.io/ixfx-demos/">View demos online</a></li>
+          <li>&gt; <a title="Docs for ixfx" href="https://clinth.github.io/ixfx-docs/">Documentation</a></li>
           <li>&gt; <a title="Source code for these demos" href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
           <li>&gt; <a href="https://github.com/ClintH/ixfx-demos/issues">Found a bug in a demo? Please report it!</a>
           </li>
