--- a/playgrounds/io/espruino-repl/index.html
+++ b/playgrounds/io/espruino-repl/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - Espruino REPL</title>
+  <title>ixfx Espruino REPL</title>
 </head>
 
 <body>
