--- a/starters/canvas/index.html
+++ b/starters/canvas/index.html
@@ -5,17 +5,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Canvas drawing loop starter</title>
-  <link rel="stylesheet" href="../../base.css">
 </head>
 
 <body>
   <style>
     :root {
       --hue: 200;
+      --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
     body {
       background-color: hsl(var(--hue), 10%, 80%);
+      font-family: var(--font);
     }
 
     h1 {
