Added Espruino temperature and acceleration/gyro sensor demos

--- a/io/index.html
+++ b/io/index.html
@@ -24,6 +24,14 @@
         </p>
       </div>
       <div>
+        <h1>espruino</h1>
+        <ul class="nobullets">
+          <li><a href="./espruino/accel-gyro/">accel-gyro</a></li>
+          <li><a href="./espruino/temperature/">temperature</a></li>
+        </ul>
+      </div>
+
+      <div>
         <h1>playgrounds</h1>
         <ul class="nobullets">
           <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
