--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -26,7 +26,10 @@
           <li>
             <a href="./io/espruino-repl">espruino-repl</a>: Run lines of code on an Espruino
           </li>
+          <li>
+            <a href="./io/espruino-plot">espruino-plot</a>: Plot data from Espruino
 
+          </li>
         </ul>
       </div>
     </section>
