polar-orbit speed control

--- a/geometry/polar-orbit/index.html
+++ b/geometry/polar-orbit/index.html
@@ -10,6 +10,7 @@
   body {
     background-color: black;
     overflow: hidden;
+    color: silver;
   }
 
   #thing {
@@ -22,6 +23,8 @@
 
 <body>
   <div id="thing"></div>
+  <label for="rangeSpeed">Speed</label>
+  <input id="rangeSpeed" type="range" min=0 max=500 />
   <script type="module" src="script.js"></script>
 </body>
 
