Shuffled camera demos, linked from index

--- a/camera/pixels-overlay/index.html
+++ b/camera/pixels-overlay/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>process-pixels</title>
+  <title>camera-overlay</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     }
   </style>
   <section>
-    <h1>process-pixels</h1>
+    <h1>camera-overlay</h1>
     <button id="btnStart">Start</button>
     <div id="lblFps"></div>
     <div id="lblDifferences"></div>
