--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       </div>
 
       <div>
+        <h2>media</h2>
+        <ul class="nobullets">
+          <li> / <a href="./camera/">camera</a></li>
+        </ul>
+      </div>
+
+      <div>
         <h2>etc</h2>
         <ul class="nobullets">
           <li> / <a href="./starters/">starters</a></li>
