Added microcontroller demos

--- a/io/index.html
+++ b/io/index.html
@@ -15,30 +15,49 @@
       <a href="../">../</a> input output
     </header>
     <section>
-      <div>
-        <p>
-          The input/output module contains functions for getting data in and out of the browser.
-        </p>
-        <p>
-          <a class="pill" href=" https://clinth.github.io/ixfx/modules/Io.html">API Reference</a>
-        </p>
-      </div>
+      <p>
+        The input/output module contains functions for getting data in and out of the browser. All these sketches
+        expect some additional hardware and steps. Please browse the source files and look at the associated README
+        files.
+      </p>
+      <p>
+        <a class="pill" href=" https://clinth.github.io/ixfx/modules/Io.html">API Reference</a>
+      </p>
+    </section>
+    <div class="demos">
       <div>
         <h1>espruino</h1>
         <ul class="nobullets">
-          <li><a href="./espruino/accel-gyro/">accel-gyro</a></li>
-          <li><a href="./espruino/temperature/">temperature</a></li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/accel-gyro"></a>
+            <a href="./espruino/accel-gyro/">accel-gyro</a>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/temperature"></a>
+            <a href="./espruino/temperature/">temperature</a>
+          </li>
         </ul>
       </div>
-
+      <div>
+        <h1>arduino</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/joystick"></a>
+            <a href="./arduino/joystick/">joystick</a>: read data from a joystick module
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/led-pwm"></a>
+            <a href="./arduino/led-pwm/">led-pwm</a>: control a LED
+          </li>
+        </ul>
+      </div>
       <div>
         <h1>playgrounds</h1>
         <ul class="nobullets">
           <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
         </ul>
       </div>
-
-    </section>
+    </div>
   </main>
 </body>
 
