moving-average-audio buff-up

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div>
         <h2>media</h2>
         <ul class="nobullets">
+          <li> / <a href="./audio/">audio</a></li>
           <li> / <a href="./camera/">camera</a></li>
         </ul>
       </div>
