keyboard/typer demo

--- a/io/index.html
+++ b/io/index.html
@@ -52,6 +52,15 @@
         </ul>
       </div>
       <div>
+        <h1>keyboard</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
+            <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
+          </li>
+        </ul>
+      </div>
+      <div>
         <h1>playgrounds</h1>
         <ul class="nobullets">
           <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
