keyboard/cursor demo
Use cursor keys to move an element around. Shows how to keep track of key state.

--- a/io/index.html
+++ b/io/index.html
@@ -30,16 +30,17 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/accel-gyro"></a>
-            <a href="./espruino/accel-gyro/">accel-gyro</a>
+            <a href="./espruino/accel-gyro/">accel-gyro</a>: use acceleration and gyroscope sensor readings
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/temperature"></a>
-            <a href="./espruino/temperature/">temperature</a>
+            <a href="./espruino/temperature/">temperature</a>: use temperature sensor readings
           </li>
         </ul>
       </div>
       <div>
         <h1>arduino</h1>
+        <p>These demos use Web Serial, sending JSON back and forth to an Arduino sketch.
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/joystick"></a>
@@ -57,6 +58,10 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
             <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/cursor"></a>
+            <a href="./keyboard/cursor/">cursor</a>: move an element around with the cursor keys
           </li>
         </ul>
       </div>
