dom/gradient-rotate
Dynamic CSS gradient

--- a/dom/index.html
+++ b/dom/index.html
@@ -20,6 +20,7 @@
       </ul>
       <ul class="nobullets">
         <li><a href="log/">log</a>: use a HTML element to log data</li>
+        <li><a href="gradient-rotate/">gradient-rotate</a>: Generates CSS linear gradients</li>
       </ul>
     </section>
   </main>
