New: dom/gradient-move - rotate gradient based on angle of pointer to center of viewport

--- a/dom/index.html
+++ b/dom/index.html
@@ -9,20 +9,43 @@
 </head>
 
 <body>
-
-  <main class="fullHeight">
+  <main>
     <header>
       <a href="../">../</a> dom
     </header>
-    <section>
-      <ul class="pillbox">
-        <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Dom.html">API Reference</a></li>
-      </ul>
-      <ul class="nobullets">
-        <li><a href="log/">log</a>: use a HTML element to log data</li>
-        <li><a href="gradient-rotate/">gradient-rotate</a>: Generates CSS linear gradients</li>
-      </ul>
-    </section>
+    <ul class="pillbox">
+      <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Dom.html">API Reference</a></li>
+    </ul>
+    <div class="demos">
+      <div>
+        <h1>gradients</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/gradient-rotate"></a>
+            <a href="./gradient-rotate/">gradient-rotate</a>: Swirling stacked gradients
+            <div class="techniques">CSS linear gradients, numericRange generators</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/gradient-move"></a>
+            <a href="./gradient-move/">gradient-move</a>
+            <div class="techniques">CSS linear gradients, CSS background clipping, screen-to-relative coordinates,
+              angles
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h1>etc</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/log"></a>
+            <a href="./log/">Log to the screen instead of console</a>
+
+          </li>
+        </ul>
+      </div>
+
+    </div>
   </main>
 </body>
 
