--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <ul class="nobullets">
           <li class="local">&gt; <a title="View hosted version of demos"
               href="https://clinth.github.io/ixfx-demos/">View demos online</a></li>
+          <li>&gt; <a href="https://stackblitz.com/github/clinth/ixfx-demos">Edit demo source code online</a></li>
           <li>&gt; <a title="Docs for ixfx" href="https://clinth.github.io/ixfx-docs/">Documentation</a></li>
           <li>&gt; <a title="Source code for these demos" href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
           <li>&gt; <a href="https://github.com/ClintH/ixfx-demos/issues">Found a bug in a demo? Please report it!</a>
