--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section id="parent">
-      <h1>ixfx demos</h1>
+      <h1>ixfx demos.</h1>
       <div>
         <h2>modules</h2>
         <ul class="nobullets">
