--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
           <li>&gt; <a title="Source code for these demos" href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
           <li>&gt; <a href="https://github.com/ClintH/ixfx-demos/issues">Found a bug in a demo? Please report it!</a>
           </li>
-
-
+        </ul>
+      </div>
+      <div>
+        <h2>edit online</h2>
+        <p>It's possible to play with the code directly in your browser and see the results using one of these options:
+        </p>
+        <ul class="nobullets">
+          <li><a href="https://gitpod.io/#https://github.com/ClintH/ixfx-demos">Gitpod</a> - requires GitHub login</li>
+          <li><a href="https://glitch.com/edit/#!/ixfx-demos">Glitch</a> - Editing experience not the best</li>
         </ul>
       </div>
     </section>
